Make build compatible with gradle v8.1.1 and java 17